--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello World DApp</title>
+  <title>Payment Transactions</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
 </head>
 <body class="container">
-  <h1>A Simple Hello World Voting Application</h1>
+  <h1>Ethereum Based Payment Tracker</h1>
   <div class="table-responsive">
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th>Candidate</th>
-          <th>Votes</th>
+          <th>Host</th>
+          <th>Amount Paid</th>
         </tr>
       </thead>
       <tbody>
@@ -32,7 +32,8 @@
     </table>
   </div>
   <input type="text" id="candidate" />
-  <a href="#" onclick="voteForCandidate()" class="btn btn-primary">Vote</a>
+   <input type="text" id="money" />
+  <a href="#" onclick="voteForCandidate()" class="btn btn-primary">Pay</a>
 </body>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
